[149] [visD] Update padding for buttons and attachments - Fix Cancel Button Alignment
Original change's description:
> [visD] Update padding for buttons and attachments - Fix Cancel Button Alignment
> 
> The following change bumps the cancel button's position 4px to the left
> (or right if you're using RTL languages), so that the center of the
> cancel button aligns with the center of the submit arrow button. The
> cancel button only appears alongside the submit arrow button, so we
> should not run into an issue where the cancel button is misaligned with
> another button.
> 
> Before: https://screenshot.googleplex.com/58fFY2Jd5NVP6rp
> After: https://screenshot.googleplex.com/6iertUAt7GamuB9
> 
> Bug: 506163976
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7833453
> Commit-Queue: Gianni Chen <giannich@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#1627990}

Bug: 512998456
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7846965
Bot-Commit: rubber-stamper@appspot.gserviceaccount.com <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7827@{#728}
Cr-Branched-From: 9f3e9aaccba63bd2ec30334e45e0bfd07ebcc8f1-refs/heads/main@{#1625079}

--- a/chrome/browser/resources/contextual_tasks/composebox.css
+++ b/chrome/browser/resources/contextual_tasks/composebox.css
@@ -74,7 +74,7 @@
   --cr-composebox-file-thumbnail-exit-animation-last:
     slide-out 350ms cubic-bezier(0.27, 1.06, 0.18, 1.00) forwards,
     fade-out 150ms cubic-bezier(0.31, 0.94, 0.34, 1.00) forwards;
-  --cancel-button-inline-end: 12px;
+  --cancel-button-inline-end: 16px;
   --context-carousel-inline-start-spacing: 12px;
   --context-carousel-top-position: 12px;
   --cr-composebox-text-container-padding-block-start: 12px;
